--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: violet;
+    background-color: rgb(250, 148, 250);
     color: rgb(35, 39, 238);
     text-align: center;
     padding: 1em;
